added setup steps

--- a/src/classes/C501_SM_Rule_Contact_NameDOB.cls
+++ b/src/classes/C501_SM_Rule_Contact_NameDOB.cls
@@ -3,8 +3,8 @@
 //  1) Debug -> Open Execute Anonymous Window
 //  2) paste code
 /*
-      C501_SM_Rule_Contact_NameDOB schedule = new C501_SM_Rule_Contact_NameDOB();
-      schedule.execute(null);
+      C501_SM_Rule_Contact_NameDOB contactNameDOB = new C501_SM_Rule_Contact_NameDOB();
+      contactNameDOB.execute(null);
 */
 //  3) click Execute
 //
