--- a/src/classes/C501_SM_Rule_Contact_NameDOBService.cls
+++ b/src/classes/C501_SM_Rule_Contact_NameDOBService.cls
@@ -10,7 +10,7 @@
 //
 // Abort scheduled jobs
 /*
-    List<CronJobDetail> scheduledJobs = [SELECT Id FROM CronJobDetail WHERE Name like 'Contact_NameDOBService_%'];
+    List<CronJobDetail> scheduledJobs = [SELECT Id FROM CronJobDetail WHERE Name like 'SM_Contact_%' or Name like 'SM_Account_%'];
     for (CronJobDetail scheduledJob :scheduledJobs) {
         Id jobId = [SELECT Id FROM CronTrigger WHERE CronJobDetailId = :scheduledJob.Id].Id;
         System.abortJob(jobId);
@@ -39,7 +39,7 @@ global class C501_SM_Rule_Contact_NameDOBService implements Schedulable {
 		// Perform all SOQL Queries outside of loop to avoid Salesforce Governor Limits: https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_gov_limits.htm
 		//
 
-        String mergeMetricName = 'Contact_NameDOBService';
+        String mergeMetricName = 'SM_Contact_NameDOBService';
 
         // Get Merge Metric
         List<C501_Merge_Metric__c> mergeMetrics = [
@@ -52,7 +52,9 @@ global class C501_SM_Rule_Contact_NameDOBService implements Schedulable {
         if (mergeMetrics.isEmpty()) {
             mergeMetrics.add( new C501_Merge_Metric__c (
                 Name = mergeMetricName,
-                Confidence__c = 100.0
+                Confidence__c = 100.0,
+                AutoMerge_Percentage__c = 0.0,
+                Description__c = 'FirstName Initial, LastName, Birthdate, and Gender must match between 2 Service Contacts on different Service Households where the Program is in the list of Enabled Programs on the rule.  Additionally the 2 Service Households must have the same Service Start Date.'
             ));
 
             insert mergeMetrics;
@@ -60,6 +62,13 @@ global class C501_SM_Rule_Contact_NameDOBService implements Schedulable {
 
         if (!mergeMetrics[0].Enable__c || String.isEmpty(mergeMetrics[0].Enabled_Programs__c)) {
             return;
+        }
+
+        List<CronJobDetail> cronJobs = [
+            SELECT Id,JobType,Name FROM CronJobDetail WHERE Name = :mergeMetricName];
+        if (cronJobs.isEmpty()) {
+            // Schedule to run daily at 3am
+            system.schedule(mergeMetricName, '0 0 3 * * ?', new C501_SM_Rule_Contact_NameDOBService());
         }
 
         Date dateUnder18 = date.today().addYears(-18);
