--- a/src/classes/C501_SM_Rule_Contact_NameDOBService.cls
+++ b/src/classes/C501_SM_Rule_Contact_NameDOBService.cls
@@ -99,7 +99,7 @@ global class C501_SM_Rule_Contact_NameDOBService implements Schedulable {
             ORDER BY Count(C501_Service_Household_Id__r.C501_Household__c) DESC];
 
         Map<String, C501_Account_Merge__c> mergeAccounts = new Map<String, C501_Account_Merge__c>();
-        String uniqueId, contactMatchId, maxId, minId;
+        String uniqueId, maxId, minId;
         for (AggregateResult result :allAggregatedByServiceContacts)  {
 
             maxId = result.get('MaxAccountId').toString();
@@ -108,11 +108,6 @@ global class C501_SM_Rule_Contact_NameDOBService implements Schedulable {
             if (String.isEmpty(maxId) || String.isEmpty(minId) || maxId == minId) {
                 continue;
             }
-
-            contactMatchId = result.get('C501_Last_Name__c').toString() + 
-                result.get('C501_FirstName_Initial__c').toString() +
-                result.get('C501_Gender__c').toString() +
-                result.get('C501_Birthdate__c').toString();
 
             uniqueId = mergeMetricName + minId + maxId;
 
@@ -125,8 +120,7 @@ global class C501_SM_Rule_Contact_NameDOBService implements Schedulable {
                 Merge_Confidence__c = mergeMetrics[0].Confidence__c,
                 Account__c = minId,
                 Merge_Target_Account__c = maxId,
-                Merge_Metric__c = mergeMetrics[0].Id,
-                Contact_Match_Id__c = contactMatchId
+                Merge_Metric__c = mergeMetrics[0].Id
             ));
         }
 
