--- a/src/classes/C501_SM_Rule_Contact_NameDOBFullHH.cls
+++ b/src/classes/C501_SM_Rule_Contact_NameDOBFullHH.cls
@@ -24,8 +24,9 @@ global class C501_SM_Rule_Contact_NameDOBFullHH implements Schedulable {
         // Get Merge Metric
         List<C501_Merge_Metric__c> mergeMetrics = [
             SELECT Id, Name, Confidence__c, Total_Merge__c,
-                Enable__c, Enabled_Programs__c,
-                AutoMerge_Percentage__c
+                Enabled_Programs__c,
+                Enable__c,
+                AutoMerge_Percentage__c, AutoMerge_Objects__c
             FROM C501_Merge_Metric__c
             WHERE Name = :mergeMetricName];
         if (mergeMetrics.isEmpty()) {
