updates for schedule management

--- a/src/classes/C501_SM_Rule_Contact_NameDOBFullHH.cls
+++ b/src/classes/C501_SM_Rule_Contact_NameDOBFullHH.cls
@@ -23,8 +23,10 @@ global class C501_SM_Rule_Contact_NameDOBFullHH implements Schedulable {
 
         // Get Merge Metric
         List<C501_Merge_Metric__c> mergeMetrics = [
-            SELECT Id, Name, Confidence__c, Total_Merge__c,
+            SELECT
                 Enabled_Programs__c,
+                Id, Name, Confidence__c,
+                Total_Merge__c, Total_Unassigned_Accounts__c, Total_Unassigned_Contacts__c,
                 Enable__c,
                 AutoMerge_Percentage__c, AutoMerge_Objects__c
             FROM C501_Merge_Metric__c
@@ -45,7 +47,7 @@ global class C501_SM_Rule_Contact_NameDOBFullHH implements Schedulable {
         }
 
         C501_SM_SharedCode c501_SM_SharedCode = new C501_SM_SharedCode();
-        c501_SM_SharedCode.ScheduleJobs();
+        c501_SM_SharedCode.ScheduleJobs(mergeMetrics[0]);
 
         List<String> programs = mergeMetrics[0].Enabled_Programs__c.split(';');
         system.debug('***** C501_SM_Rule_Contact_NameDOBFullHH:execute - Enabled_Programs__c: ' + String.valueOf(programs));
