--- a/src/classes/C501_SM_SharedCode.cls
+++ b/src/classes/C501_SM_SharedCode.cls
@@ -14,10 +14,18 @@ global with sharing class C501_SM_SharedCode {
             hourlyOffset = 4;
         }
 
-        Boolean hourlySyncOnly = false;
+        Boolean hourlySyncOnly = true;
 
-        if (mergeMetric.AutoMerge_Percentage__c == null || mergeMetric.AutoMerge_Percentage__c <= 0.0 || ((mergeMetric.Total_Unassigned_Accounts__c + mergeMetric.Total_Unassigned_Contacts__c) < 100)) {
-            hourlySyncOnly = true;
+        if (mergeMetric.AutoMerge_Percentage__c <> null && mergeMetric.AutoMerge_Percentage__c > 0.0) {
+            List<String> automergeObjects = mergeMetric.AutoMerge_Objects__c.split(';');
+
+            if (automergeObjects.contains('Contact') && mergeMetric.Total_Unassigned_Contacts__c > 0) {
+                hourlySyncOnly = false;
+            }
+
+            if (automergeObjects.contains('Account') && mergeMetric.Total_Unassigned_Accounts__c > 0) {
+                hourlySyncOnly = false;
+            }
         }
 
         List<CronJobDetail> cronJobDetails = [SELECT Id, JobType, Name FROM CronJobDetail];
