--- a/src/classes/C501_SM_Rule_TEST.cls
+++ b/src/classes/C501_SM_Rule_TEST.cls
@@ -49,7 +49,7 @@ private with sharing class C501_SM_Rule_TEST {
             mergeMetric.Enable__c = true;
             mergeMetric.AutoMerge_Percentage__c = 0.0;
             mergeMetric.Enabled_Programs__c = 'Energy Assistance';
-            mergeMetric.AutoMerge_Objects__c = 'Account;Contact';
+            mergeMetric.AutoMerge_Objects__c = 'Account;Contacts within Account;Contacts Across Accounts';
 
             listMergeMetrics.add(mergeMetric);
         }
